# Sherlock

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  Sherlock_CTO_Pitch.pptx  docker-compose.yml
deploy/native-rhel/: README.md  bootstrap.sh  install-gitlab.sh  install-sherlock.sh  sherlock.env.example
fixtures/account-service/: README.md  openapi.yaml  pom.xml
fixtures/analytics-service/: README.md  openapi.yaml  pyproject.toml  requirements.txt
fixtures/analytics-service/app/: db.py  ledger_report_reader.py  main.py
fixtures/customer-service/: README.md  asyncapi.yaml  openapi.yaml  pom.xml
fixtures/fraud-detection/: README.md  asyncapi.yaml  pyproject.toml  requirements.txt
fixtures/fraud-detection/app/: account_client.py  kafka_consumer.py  main.py
fixtures/legacy-ledger/: README.md
fixtures/mobile-bff/: README.md  openapi.yaml  package.json
fixtures/notification-service/: README.md  asyncapi.yaml  pom.xml
fixtures/shared-domain-lib/: README.md  pom.xml
fixtures/transaction-service/: README.md  asyncapi.yaml  openapi.yaml  pom.xml
fixtures/web-portal-bff/: README.md  openapi.yaml  package.json
scripts/: bootstrap-gitlab.sh  demo-additive-schema.sh  demo-break-file.sh  demo-breaking-change.sh  demo-deprecated-removal.sh  demo-topic-additive.sh  init-db.sql  register-webhooks.sh  restore-fixture-gits.sh  sherlock-impact-check.sh  status.sh
services/sherlock/: Dockerfile  requirements.txt
services/sherlock-cmdb-stub/: Dockerfile  requirements.txt
tools/deck/: README.md  generate.py
tools/vscode-sherlock/: .vscodeignore  (+3 more)
(+79 files in other folders)
