[project]
name = "fraud-detection"
version = "1.0.0"
description = "Real-time fraud scoring on banking transaction events"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "confluent-kafka==2.5.3",
    "pydantic==2.9.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
